--- a/SoftAir.Web.Api/appsettings.json
+++ b/SoftAir.Web.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-4JUOJOG\\SQLEXPRESS;Database=SoftAir-dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
