--- a/SoftAir.Services/SoftAir.Services.csproj
+++ b/SoftAir.Services/SoftAir.Services.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SoftAir.Data\SoftAir.Data.csproj" />
+  </ItemGroup>
+
 </Project>
