--- a/SoftAir.Web.Api/SoftAir.Web.Api.csproj
+++ b/SoftAir.Web.Api/SoftAir.Web.Api.csproj
@@ -12,7 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SoftAir.Data\SoftAir.Data.csproj" />
   </ItemGroup>
 
 </Project>
