--- a/SoftAir.Web.Api/SoftAir.Web.Api.csproj
+++ b/SoftAir.Web.Api/SoftAir.Web.Api.csproj
@@ -5,13 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Controllers\**" />
-    <Content Remove="Controllers\**" />
-    <EmbeddedResource Remove="Controllers\**" />
-    <None Remove="Controllers\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,6 +14,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SoftAir.Data\SoftAir.Data.csproj" />
+    <ProjectReference Include="..\SoftAir.Services\SoftAir.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
