--- a/SoftAir.Web.Api/appsettings.json
+++ b/SoftAir.Web.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-4JUOJOG\\SQLEXPRESS;Database=SoftAir-dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AppConnection": "Server=DESKTOP-4JUOJOG\\SQLEXPRESS;Database=SoftAir-dev;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
